2007-10-03  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/Makefile.am:
	* src/av-cp/av-cp-renderercombo.c:
	* src/av-cp/av-cp-renderercombo.h:
	* src/av-cp/av-cp.c:
	* src/av-cp/av-resource-factory.c:
	* src/av-cp/av-resource-factory.h:
	* src/av-cp/media-renderer-proxy.c:
	* src/av-cp/media-renderer-proxy.h:

	- Add AV factory.
	- Add MediaRendererProxy.

2007-09-25  Zeeshan Ali  <zeenix@gstreamer.net>

	* data/gupnp-av-cp.glade:

	- Remove the progress label.
	- Add a status bar.

2007-09-25  Zeeshan Ali  <zeenix@gstreamer.net>

	* Makefile.am:

	Recurse into newly added 'data' subdirectory.

	* data/pixmaps/Makefile.am:
	* data/xml/Makefile.am:

	Declare 'Makefile.in' as 'MAINTAINERCLEANFILES'.

2007-09-25  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/Makefile.am:
	* src/network-light/Makefile.am:
	* src/universal-cp/Makefile.am:

	Commit the newly added (forgotten) 'Makefile.am's.

2007-09-25  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:
	* data/Makefile.am:
	* data/gupnp-av-cp.glade:
	* data/gupnp-network-light.glade:
	* data/gupnp-universal-cp.glade:
	* data/pixmaps/Makefile.am:
	* data/pixmaps/network-light-22x22.png:
	* data/pixmaps/network-light-256x256.png:
	* data/pixmaps/network-light-off.png:
	* data/pixmaps/network-light-on.png:
	* data/pixmaps/upnp-action-arg-in.png:
	* data/pixmaps/upnp-action-arg-out.png:
	* data/pixmaps/upnp-device.png:
	* data/pixmaps/upnp-service.png:
	* data/pixmaps/upnp-state-variable.png:
	* data/xml/Dimming-scpd.xml:
	* data/xml/Makefile.am:
	* data/xml/SwitchPower-scpd.xml:
	* data/xml/network-light-desc.xml:
	* src/Makefile.am:
	* src/av-cp/Makefile.am:
	* src/gupnp-av-cp.glade:
	* src/gupnp-network-light.glade:
	* src/gupnp-universal-cp.glade:
	* src/pixmaps/Makefile.am:
	* src/pixmaps/network-light-22x22.png:
	* src/pixmaps/network-light-256x256.png:
	* src/pixmaps/network-light-off.png:
	* src/pixmaps/network-light-on.png:
	* src/pixmaps/upnp-action-arg-in.png:
	* src/pixmaps/upnp-action-arg-out.png: